<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/mainbg"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/app_name"
            android:fontFamily="@font/font_family"
            android:textSize="43dp"
            android:textColor="@color/white"
            android:gravity="bottom"
            android:paddingLeft="28dp"
            android:letterSpacing="0.01"
            android:paddingBottom="14dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/rounded_linearlayout"
            android:gravity="left"
            android:padding="31dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/black"
                android:text="@string/signup_topic"
                android:layout_marginTop="10dp"
                android:textSize="40dp" />

            <!--  name  -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/fontColor_dark"
                android:text="@string/signup_name"
                android:layout_marginTop="40dp"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/reName"
                android:textSize="22dp"
                android:fontFamily="@font/font_family"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/gray"
                android:textColor="@color/dark_gray"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--    last name    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/fontColor_dark"
                android:text="@string/signup_last_name"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/reLastName"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/font_family"
                android:autofillHints="password"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@color/dark_gray"
                android:textSize="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--    email    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/fontColor_dark"
                android:text="@string/signup_email"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/reEmail"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/font_family"
                android:autofillHints="password"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="@color/dark_gray"
                android:textSize="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--   password   -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/fontColor_dark"
                android:text="@string/login_pass_hint"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/rePassword"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/font_family"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="@color/dark_gray"
                android:textSize="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--    re enter password    -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:textColor="@color/fontColor_dark"
                android:text="@string/signup_re_enter_password"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/reEnterPassword"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/font_family"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColor="@color/dark_gray"
                android:textSize="22dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reSignUp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:letterSpacing="0.01"
                android:padding="10dp"
                android:textSize="30dp"
                android:text="@string/create_account" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingTop="11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family"
                    android:text="@string/signup_question"
                    android:textSize="20dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reSignIn"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family"
                    android:background="@null"
                    android:textAllCaps="false"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:text="@string/login_topic"
                    android:textColor="@color/fontColor_dark"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>