<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/mainbg"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/profile_list_icon"
                    android:src="@drawable/icon_list"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/fragment_home"
                    android:textColor="@color/white"
                    android:fontFamily="@font/font_family"
                    android:gravity="center_vertical"
                    android:textSize="23dp"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:id="@+id/home_profile_picture"
                    android:src="@drawable/logo"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:alpha="0.8"
            android:padding="15dp"
            android:background="@drawable/rounded_all_border_linearlayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="40dp"
                    android:minHeight="40dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/ic_round_playlist_add_check_24"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/font_family"
                    android:text="@string/profile_fragment_topic"/>
            </LinearLayout>

            <!--    vegetable    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/font_family"
                android:text="@string/home_fragment_vegetable"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_vegetable1"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_vegetable2"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_vegetable3"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--    fruit    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/font_family"
                android:text="@string/home_fragment_fruit"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_fruit1"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_fruit2"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_fruit3"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--    fruit    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/font_family"
                android:text="@string/home_fragment_herb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_herb1"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_herb2"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/profile_herb3"
                        android:src="@drawable/brocoli"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>